fix kohya launch

--- a/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
+++ b/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
@@ -1275,9 +1275,11 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "id": "5b51dce4-bd8b-4270-b962-8e7305a66ec8",
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "51c42d26-e203-4fed-b1f4-d10b8b886bd8",
       "metadata": {},
+      "outputs": [],
       "source": [
         "import psutil\n",
         "\n",
@@ -1306,18 +1308,20 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "port = 8877\n",
         "project_url = 'https://github.com/bmaltais/kohya_ss.git'\n",
         "project_name = get_project_name(project_url)\n",
         "project_dir = os.path.join(root_dir, project_name)\n",
-        "\n",
-        "%cd $project_dir\n",
         "\n",
         "launch_args = base_args[:] + [\n",
         "    f'cd {project_dir}','&&',\n",
         "    # 'pip install --user \"opencv-python-headless<4.3\" ','&&',\n",
         "    'python kohya_gui.py',\n",
-        "    '--server_port 8877',\n",
+        "    f'--server_port {port}',\n",
+        "    '--inbrowser',\n",
+        "    # '--share'\n",
         "]\n",
+        "\n",
         "cmd = (\" \").join(launch_args)\n",
         "print(launch_args)\n",
         "\n",
@@ -1353,14 +1357,6 @@
         "# \"/openbayes/home/training_sessions/LoRA/image\" \\\n",
         "# --caption_weights=\"https://storage.googleapis.com/sfr-vision-language-research/BLIP/models/model_large_caption.pth\""
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "3079306f-a655-498d-9e14-574e6f29b534",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
