--- a/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
+++ b/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
@@ -186,7 +186,7 @@
         "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
         "        continue\n",
         "    elif not any(library in installed_library for installed_library in installed_libraries):\n",
-        "        !pip install --user $library\n",
+        "        !pip install $library\n",
         "    else:\n",
         "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
         "        \n",
@@ -259,41 +259,25 @@
         "from IPython.display import clear_output\n",
         "import ipywidgets as widgets\n",
         "\n",
-        "python_version = '3.10.6'\n",
-        "\n",
-        "# if env_name == 'AutoDL':\n",
-        "custom_env_name = 'py' + python_version\n",
-        "# elif env_name == 'OpenBayes':\n",
-        "#     custom_env_name = 'base'\n",
+        "custom_env_name = 'kohya'\n",
         "\n",
         "s = getoutput('conda info --env')\n",
         "print(s)\n",
         "if custom_env_name not in s:\n",
         "    print(f'\u5f53\u524d\u7cfb\u7edf\u4e2d\u6ca1\u6709{custom_env_name}\u73af\u5883\uff0c\u6b63\u5728\u5b89\u88c5')\n",
-        "    # \u521b\u5efaConda\u65b0\u7684\u865a\u62df\u73af\u5883\n",
-        "    # \u6784\u5efa\u4e00\u4e2a\u865a\u62df\u73af\u5883\n",
-        "    # \u66f4\u65b0bashrc\u4e2d\u7684\u73af\u5883\u53d8\u91cf\n",
-        "    # \u5728 /openbayes/home \u4e0b\u521b\u5efa\u4e00\u4e2a\u65b0\u7684\u73af\u5883\uff1ahttps://openbayes.com/docs/gear/conda/#%E4%BD%BF%E7%94%A8-conda-%E5%88%9B%E5%BB%BA%E6%96%B0%E7%9A%84%E7%8E%AF%E5%A2%83\n",
         "    python_install_args = [\n",
         "        'source /usr/local/etc/profile.d/conda.sh','&&',\n",
-        "        f'cd {root_dir}','&&',\n",
-        "        f'conda create -p {custom_env_name} python={python_version} -y','&&',\n",
+        "        f'conda create -n {custom_env_name} --clone py3.10.6 -y','&&',\n",
         "        'conda init bash','&&',\n",
         "        'source /root/.bashrc -y'\n",
         "    ]\n",
-        "    \n",
-        "    # !source /usr/local/etc/profile.d/conda.sh &&\\\n",
-        "    # conda create -n $custom_env_name python=$python_version -y &&\\\n",
-        "    # conda init bash && source /root/.bashrc -y\n",
+        "\n",
         "    \n",
         "    python_install_cmd = (\" \").join(python_install_args)\n",
         "    !$python_install_cmd\n",
         "    \n",
         "else:\n",
         "    print(f'\u5df2\u7ecf\u5b89\u88c5\u4e86{custom_env_name}\u73af\u5883')\n",
-        "\n",
-        "# clear_output(wait=True)\n",
-        "# print(\"Done!\")\n",
         "\n",
         "widgets.Button(\n",
         "    value=False,\n",
@@ -599,7 +583,7 @@
         "\n",
         "# !cd $root_dir &&\\\n",
         "# cd triton/python &&\\\n",
-        "# pip install --user cmake &&\\\n",
+        "# pip install cmake &&\\\n",
         "# pip -v install -e ."
       ]
     },
@@ -622,7 +606,7 @@
       "source": [
         "triton_install_args = base_args[:]\n",
         "triton_install_args += [\n",
-        "    'python -m pip install --user -U --pre triton'\n",
+        "    'python -m pip install -U --pre triton'\n",
         "]\n",
         "triton_install_cmd = (\" \").join(triton_install_args)\n",
         "print(triton_install_cmd)\n",
@@ -679,20 +663,20 @@
         "'''\n",
         "\n",
         "def get_python_version_and_parse():\n",
-        "    # Get the current python version\n",
-        "    version = subprocess.run(['python', '-V'], stdout=subprocess.PIPE).stdout.decode().strip()\n",
-        "    version = version.split(' ')[1]\n",
-        "    major, minor, patch = version.split('.')\n",
+        "    # Get the current python version using IPython magic command\n",
+        "    version = !{\" \".join(base_args + ['python -V'])}\n",
+        "    version = version[0].split(' ')[1]\n",
+        "    major, minor, _ = version.split('.')\n",
         "    # formatted_version = f'cp{major}{minor[0]}{patch[0]}'\n",
-        "    formatted_version = f'cp{major}{minor[0]}'\n",
+        "    formatted_version = f'cp{major}{minor}'\n",
         "    return formatted_version\n",
         "\n",
         "\n",
         "def get_xformers_info():\n",
         "    get_xformers_info_args = base_args[:]\n",
         "    get_xformers_info_args += [\n",
-        "        f'cd {webUIDir}','&&',\n",
-        "        'git pull','&&',\n",
+        "        # f'cd {comfyUIDir}','&&',\n",
+        "        # 'git pull','&&',\n",
         "        # 'git checkout d8f8bcb','&&'\n",
         "        'python -V',\n",
         "        '&&',\n",
@@ -723,17 +707,17 @@
         "                return False\n",
         "    return True\n",
         "\n",
+        "import re\n",
+        "\n",
         "def find_xformers_whl_and_install(root):\n",
         "    py_short_ver = get_python_version_and_parse()\n",
         "    whl_name = f'xformers*{py_short_ver}*.whl'\n",
         "    whl_path_list = !find $root -name $whl_name\n",
         "    whl_path_list = list(filter(lambda x: x.endswith('.whl'), whl_path_list))\n",
-        "    print(whl_path_list)\n",
         "    if whl_path_list:\n",
-        "        \n",
-        "        whl_path = whl_path_list[0]\n",
-        "        # subprocess.run(['pip', 'install', whl_path], stdout=subprocess.PIPE)\n",
-        "        !pip install --user $whl_path\n",
+        "        whl_path_list = sorted(whl_path_list, key=lambda x: [int(d) if d.isdigit() else d for d in re.split(r'(\\d+)', x)])\n",
+        "        whl_path = whl_path_list[-1]\n",
+        "        !{\" \".join(base_args + [f'python -m pip install {whl_path}'])}\n",
         "        return whl_path\n",
         "    else:\n",
         "        return None\n",
@@ -754,8 +738,7 @@
         "        if whl_path:\n",
         "            break\n",
         "        else:\n",
-        "            continue\n",
-        "    "
+        "            continue\n"
       ]
     },
     {
@@ -936,7 +919,7 @@
         "        install_cmd = (\" \").join(base_args[:] + [\n",
         "            f'cd {project_dir}',\n",
         "            '&&', \n",
-        "            'pip install --user --use-pep517 --upgrade -r requirements.txt'\n",
+        "            'pip install --use-pep517 --upgrade -r requirements.txt'\n",
         "        ])\n",
         "        print(install_cmd)\n",
         "        !$install_cmd\n",
@@ -1315,7 +1298,7 @@
         "\n",
         "launch_args = base_args[:] + [\n",
         "    f'cd {project_dir}','&&',\n",
-        "    # 'pip install --user \"opencv-python-headless<4.3\" ','&&',\n",
+        "    # 'pip install \"opencv-python-headless<4.3\" ','&&',\n",
         "    'python kohya_gui.py',\n",
         "    f'--server_port {port}',\n",
         "    '--inbrowser',\n",
@@ -1335,7 +1318,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# !pip install --user --upgrade tensorflow opencv-python"
+        "# !pip install --upgrade tensorflow opencv-python"
       ]
     },
     {
