--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -568,20 +568,20 @@
         "'''\n",
         "\n",
         "def get_python_version_and_parse():\n",
-        "    # Get the current python version\n",
-        "    version = subprocess.run(['python', '-V'], stdout=subprocess.PIPE).stdout.decode().strip()\n",
-        "    version = version.split(' ')[1]\n",
-        "    major, minor, patch = version.split('.')\n",
+        "    # Get the current python version using IPython magic command\n",
+        "    version = !{\" \".join(base_args + ['python -V'])}\n",
+        "    version = version[0].split(' ')[1]\n",
+        "    major, minor, _ = version.split('.')\n",
         "    # formatted_version = f'cp{major}{minor[0]}{patch[0]}'\n",
-        "    formatted_version = f'cp{major}{minor[0]}'\n",
+        "    formatted_version = f'cp{major}{minor}'\n",
         "    return formatted_version\n",
         "\n",
         "\n",
         "def get_xformers_info():\n",
         "    get_xformers_info_args = base_args[:]\n",
         "    get_xformers_info_args += [\n",
-        "        f'cd {webUIDir}','&&',\n",
-        "        'git pull','&&',\n",
+        "        # f'cd {comfyUIDir}','&&',\n",
+        "        # 'git pull','&&',\n",
         "        # 'git checkout d8f8bcb','&&'\n",
         "        'python -V',\n",
         "        '&&',\n",
@@ -612,17 +612,17 @@
         "                return False\n",
         "    return True\n",
         "\n",
+        "import re\n",
+        "\n",
         "def find_xformers_whl_and_install(root):\n",
         "    py_short_ver = get_python_version_and_parse()\n",
         "    whl_name = f'xformers*{py_short_ver}*.whl'\n",
         "    whl_path_list = !find $root -name $whl_name\n",
         "    whl_path_list = list(filter(lambda x: x.endswith('.whl'), whl_path_list))\n",
-        "    print(whl_path_list)\n",
         "    if whl_path_list:\n",
-        "        \n",
-        "        whl_path = whl_path_list[0]\n",
-        "        # subprocess.run(['pip', 'install', whl_path], stdout=subprocess.PIPE)\n",
-        "        !pip install $whl_path \n",
+        "        whl_path_list = sorted(whl_path_list, key=lambda x: [int(d) if d.isdigit() else d for d in re.split(r'(\\d+)', x)])\n",
+        "        whl_path = whl_path_list[-1]\n",
+        "        !{\" \".join(base_args + [f'python -m pip install {whl_path}'])}\n",
         "        return whl_path\n",
         "    else:\n",
         "        return None\n",
@@ -643,8 +643,7 @@
         "        if whl_path:\n",
         "            break\n",
         "        else:\n",
-        "            continue\n",
-        "    "
+        "            continue\n"
       ]
     },
     {
