--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -821,6 +821,31 @@
     },
     {
       "cell_type": "markdown",
+      "id": "2f782f5e-08c8-423c-9a6c-759642ce1c4c",
+      "metadata": {},
+      "source": [
+        "## \u83b7\u53d6webUIDir"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a2292508-8716-48ec-9053-52349d9a9d89",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "global webUIDir\n",
+        "try:\n",
+        "    webUIDir\n",
+        "    if len(webUIDir)==0:\n",
+        "        webUIDir = getWebUIDir()\n",
+        "except:\n",
+        "    webUIDir = getWebUIDir()\n",
+        "print(webUIDir)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "8d177f7c-9542-45c2-aeb0-3d81cc4cacdf",
       "metadata": {},
       "source": [
@@ -929,14 +954,17 @@
         "import os\n",
         "import shutil\n",
         "\n",
-        "wlidcards_lib = os.path.join(repo_root_dir, './configs/wildcards_lib')\n",
+        "wildcards_lib = os.path.join(repo_root_dir, './configs/wildcards_lib')\n",
         "target_dir = os.path.join(webUIDir, './extensions/stable-diffusion-webui-wildcards/wildcards')\n",
-        "# \u5220\u9664\u76ee\u6807\u76ee\u5f55\n",
-        "if os.path.exists(target_dir):\n",
+        "\n",
+        "# \u68c0\u67e5\u76ee\u6807\u76ee\u5f55\u662f\u5426\u662f\u7b26\u53f7\u94fe\u63a5\n",
+        "if os.path.islink(target_dir):\n",
+        "    os.unlink(target_dir)\n",
+        "elif os.path.exists(target_dir):\n",
         "    shutil.rmtree(target_dir)\n",
         "\n",
         "# \u521b\u5efa\u8f6f\u94fe\u63a5\n",
-        "os.symlink(wlidcards_lib, target_dir)"
+        "os.symlink(wildcards_lib, target_dir)"
       ]
     },
     {
