--- a/docker/src/i18n/locales/en_US/common.yaml
+++ b/docker/src/i18n/locales/en_US/common.yaml
@@ -13,3 +13,40 @@ CLEAN_IMAGE:
   LABEL: "🧹 Clean unused images"
 GPU_STATUS:
   LABEL: "📈 View GPU status"
+SELECT_PROJECT_TYPE: "Select a build plan:"
+OPERATION_CANCELLED: "Operation cancelled."
+CLEANING_DOCKER_RESOURCES: "Cleaning up unused Docker resources..."
+DOCKER_RESOURCES_CLEANED_SUCCESSFULLY: "🧹🔜👌 Docker resources cleaned successfully."
+ERROR_CLEANING_DOCKER_RESOURCES: "Error cleaning up Docker resources"
+SELECT_CONTAINER_TO_LAUNCH: "Which container do you want to launch?"
+TEST_CONTAINER:
+  LABEL: "🧪 Test container"
+PRODUCTION_CONTAINER:
+  LABEL: "🏭 Production container"
+  HINT: "Deploy service for users"
+STOPPING_AND_REMOVING_DOCKER_CONTAINERS: "Stopping and removing old Docker containers..."
+DOCKER_CONTAINERS_STOPPED_AND_REMOVED: "Old Docker containers stopped and removed."
+STARTING_NEW_TEST_CONTAINER: "Starting new test container..."
+AUTO_LAUNCHER_INSTALLED_SUCCESSFULLY: "Auto launcher installed successfully."
+ERROR_INSTALLING_AUTO_LAUNCHER: "Error installing auto launcher"
+NVITOP_ALREADY_INSTALLED: "Nvitop is already installed."
+INSTALLING_NVITOP: "Nvitop is not installed. Installing now..."
+NVITOP_SUCCESSFULLY_INSTALLED: "Nvitop successfully installed."
+NVITOP_INSTALLATION_FAILED: "Failed to install Nvitop."
+CONDA_IMAGE_LABEL: "🐍Build Conda image"
+CONDA_IMAGE_HINT: "Based on nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04 image, including MiniConda, JupyterLab, and Openbayes theme"
+PYTORCH_IMAGE_LABEL: "🔥Build Pytorch 2.0 image"
+PYTORCH_IMAGE_HINT: "Includes Python 3.10.6 and Pytorch 2.0.0"
+SDWEBUI_BASE_IMAGE_LABEL: "🕹️Build Stable Diffusion WebUI base image"
+SDWEBUI_EXT_IMAGE_LABEL: "🧩Build Stable Diffusion WebUI image with commonly used plugins"
+SDWEBUI_EXT_IMAGE_HINT: "Includes Chinese localization, image browser, ControlNet, etc."
+SCREEN_NOT_FOUND: "Screen not found. Installing now..."
+SCREEN_INSTALLED_SUCCESSFULLY: "Screen installed successfully."
+SCREEN_INSTALLATION_FAILED: "Error installing screen. Please install manually."
+ERROR: "Error"
+STD_ERR: "Standard Error"
+STD_OUT: "Standard Output"
+SERVICE_FILE_CREATED: "Service file '{{filename}}' has been created in the '{{directory}}' directory and copied to /etc/systemd/system."
+BUILDING_IMAGE_VIA_DOCKER: "Building image {{tag}} via Docker"
+IMAGE_SUCCESSFULLY_BUILT_VIA_DOCKER: "Image {{tag}} successfully built via Docker"
+IMAGE_BUILD_FAILED: "Image {{tag}} build failed"
