--- a/docker/src/i18n/locales/zh_CN/common.yaml
+++ b/docker/src/i18n/locales/zh_CN/common.yaml
@@ -13,3 +13,40 @@ CLEAN_IMAGE:
   LABEL: "🧹清理多余的镜像"
 GPU_STATUS:
   LABEL: "📈查看GPU运行状况"
+SELECT_PROJECT_TYPE: "选择一个构建方案："
+OPERATION_CANCELLED: "操作已取消。"
+CLEANING_DOCKER_RESOURCES: "正在清理无用的 Docker 资源..."
+DOCKER_RESOURCES_CLEANED_SUCCESSFULLY: "🧹🔜👌 Docker 资源清理完毕。"
+ERROR_CLEANING_DOCKER_RESOURCES: "清理 Docker 资源时出错"
+SELECT_CONTAINER_TO_LAUNCH: "要启动哪个容器呢?"
+TEST_CONTAINER:
+  LABEL: "🧪测试容器"
+PRODUCTION_CONTAINER:
+  LABEL: "🏭生产容器"
+  HINT: "部署服务面向用户"
+STOPPING_AND_REMOVING_DOCKER_CONTAINERS: "正在停止并删除旧的 Docker 容器..."
+DOCKER_CONTAINERS_STOPPED_AND_REMOVED: "旧的 Docker 容器已停止并删除。"
+STARTING_NEW_TEST_CONTAINER: "正在启动新的测试容器..."
+AUTO_LAUNCHER_INSTALLED_SUCCESSFULLY: "自启服务安装成功。"
+ERROR_INSTALLING_AUTO_LAUNCHER: "安装自启服务时出错"
+NVITOP_ALREADY_INSTALLED: "Nvitop已经安装。"
+INSTALLING_NVITOP: "Nvitop未安装。正在安装..."
+NVITOP_SUCCESSFULLY_INSTALLED: "Nvitop安装成功。"
+NVITOP_INSTALLATION_FAILED: "安装Nvitop失败。"
+CONDA_IMAGE_LABEL: "🐍构建Conda镜像"
+CONDA_IMAGE_HINT: "基于nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04镜像，包含MiniConda、JupyterLab、Openbayes主题"
+PYTORCH_IMAGE_LABEL: "🔥构建Pytorch2.0镜像"
+PYTORCH_IMAGE_HINT: "包含Python3.10.6和Pytorch2.0.0"
+SDWEBUI_BASE_IMAGE_LABEL: "🕹️构建Stable Diffusion WebUI基本镜像"
+SDWEBUI_EXT_IMAGE_LABEL: "🧩构建Stable Diffusion WebUI附带常用插件的镜像"
+SDWEBUI_EXT_IMAGE_HINT: "包含汉化、图库浏览器、ControlNet等"
+SCREEN_NOT_FOUND: "未检测到 screen，现在将自动安装..."
+SCREEN_INSTALLED_SUCCESSFULLY: "已成功安装 screen。"
+SCREEN_INSTALLATION_FAILED: "安装 screen 时出错，请手动安装。"
+ERROR: "错误"
+STD_ERR: "标准错误"
+STD_OUT: "标准输出"
+SERVICE_FILE_CREATED: "服务文件 '{{filename}}' 已在 '{{directory}}' 目录创建并复制到 /etc/systemd/system。"
+BUILDING_IMAGE_VIA_DOCKER: "通过 Docker 构建镜像 {tag}"
+IMAGE_SUCCESSFULLY_BUILT_VIA_DOCKER: "镜像 {tag} 通过 Docker 构建成功"
+IMAGE_BUILD_FAILED: "镜像 {tag} 构建失败"
