--- a/docker/src/i18n/locales/en_US/common.yaml
+++ b/docker/src/i18n/locales/en_US/common.yaml
@@ -1,60 +1,63 @@
-TOOL_NAME: "Simple Container Image Builder"
-SELECT_OPERATION: "Please select an operation:"
+TOOL_NAME: Simple Container Image Builder
+SELECT_OPERATION: 'Please select an operation:'
 START_CONTAINER:
-  LABEL: "🚀 Launch container"
-  HINT: "execute docker-compose.yaml"
+  LABEL: 🚀 Start Container
+  HINT: Execute docker-compose.yaml
 BUILD_IMAGE:
-  LABEL: "🛠️ Build image"
-  HINT: "recommended"
+  LABEL: 🛠️ Build Image
+  HINT: Recommended
 INSTALL_SERVICE:
-  LABEL: "🔌 Install autolaunch service"
-  HINT: "run autolaunch.py"
+  LABEL: 🔌 Install Auto-Launch Service
+  HINT: Run production container
 CLEAN_IMAGE:
-  LABEL: "🧹 Clean unused images"
+  LABEL: 🧹 Clean Unused Images
 GPU_STATUS:
-  LABEL: "📈 View GPU status"
-SELECT_PROJECT_TYPE: "Select a build plan:"
-OPERATION_CANCELLED: "Operation cancelled."
-CLEANING_DOCKER_RESOURCES: "Cleaning up unused Docker resources..."
-DOCKER_RESOURCES_CLEANED_SUCCESSFULLY: "🧹🔜👌 Docker resources cleaned successfully."
-ERROR_CLEANING_DOCKER_RESOURCES: "Error cleaning up Docker resources"
-SELECT_CONTAINER_TO_LAUNCH: "Which container do you want to launch?"
+  LABEL: 📈 Check GPU Status
+SELECT_PROJECT_TYPE: 'Select a build scheme:'
+OPERATION_CANCELLED: Operation cancelled.
+CLEANING_DOCKER_RESOURCES: Cleaning unused Docker resources...
+DOCKER_RESOURCES_CLEANED_SUCCESSFULLY: 🧹🔜👌 Docker resources cleaned successfully.
+ERROR_CLEANING_DOCKER_RESOURCES: Error cleaning Docker resources.
+SELECT_CONTAINER_TO_LAUNCH: Which container would you like to start?
 TEST_CONTAINER:
-  LABEL: "🧪 Test container"
+  LABEL: 🧪 Test Container
 PRODUCTION_CONTAINER:
-  LABEL: "🏭 Production container"
-  HINT: "Deploy service for users"
-STOPPING_AND_REMOVING_DOCKER_CONTAINERS: "Stopping and removing old Docker containers..."
-DOCKER_CONTAINERS_STOPPED_AND_REMOVED: "Old Docker containers stopped and removed."
-STARTING_NEW_TEST_CONTAINER: "Starting new test container..."
-AUTO_LAUNCHER_INSTALLED_SUCCESSFULLY: "Auto launcher installed successfully."
-ERROR_INSTALLING_AUTO_LAUNCHER: "Error installing auto launcher"
-NVITOP_ALREADY_INSTALLED: "Nvitop is already installed."
-INSTALLING_NVITOP: "Nvitop is not installed. Installing now..."
-NVITOP_SUCCESSFULLY_INSTALLED: "Nvitop successfully installed."
-NVITOP_INSTALLATION_FAILED: "Failed to install Nvitop."
-CONDA_IMAGE:
-  LABEL: "🐍 Build Conda image"
-  HINT: "Based on nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04 image, including MiniConda, JupyterLab, and Openbayes theme"
+  LABEL: 🏭 Production Container
+  HINT: Deploy service for end users
+STOPPING_AND_REMOVING_DOCKER_CONTAINERS: Stopping and removing old Docker containers...
+DOCKER_CONTAINERS_STOPPED_AND_REMOVED: Old Docker containers stopped and removed.
+STARTING_NEW_TEST_CONTAINER: Starting new test container...
+AUTO_LAUNCHER_INSTALLED_SUCCESSFULLY: Auto-launch service installed successfully.
+ERROR_INSTALLING_AUTO_LAUNCHER: Error installing auto-launch service.
+NVITOP_ALREADY_INSTALLED: Nvitop is already installed.
+INSTALLING_NVITOP: Nvitop is not installed. Installing now...
+NVITOP_SUCCESSFULLY_INSTALLED: Nvitop installed successfully.
+NVITOP_INSTALLATION_FAILED: Failed to install Nvitop.
+CONDA_IMAGE: 
+  LABEL: 🐍 Build Conda Image
+  HINT: Based on nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04 image, includes MiniConda, JupyterLab, and Openbayes theme
 PYTORCH_IMAGE:
-  LABEL: "🔥 Build Pytorch 2.0 image"
-  HINT: "Includes Python 3.10.6 and Pytorch 2.0.0"
+  LABEL: 🔥 Build Pytorch 2.0 Image
+  HINT: Includes Python 3.10.6 and Pytorch 2.0.0
 SDWEBUI_BASE_IMAGE:
-  LABEL: "🕹️ Build Stable Diffusion WebUI base image"
+  LABEL: 🕹️ Build Stable Diffusion WebUI Base Image
 SDWEBUI_EXT_IMAGE:
-  LABEL: "🧩 Build Stable Diffusion WebUI image with commonly used plugins"
-  HINT: "Includes Chinese localization, image browser, ControlNet, etc."
-SCREEN_NOT_FOUND: "Screen not found. Installing now..."
-SCREEN_INSTALLED_SUCCESSFULLY: "Screen installed successfully."
-SCREEN_INSTALLATION_FAILED: "Error installing screen. Please install manually."
-ERROR: "Error"
-STD_ERR: "Standard Error"
-STD_OUT: "Standard Output"
-SERVICE_FILE_CREATED: "Service file '{{filename}}' has been created in the '{{directory}}' directory and copied to /etc/systemd/system."
-BUILDING_IMAGE_VIA_DOCKER: "Building image {{tag}} via Docker"
-IMAGE_SUCCESSFULLY_BUILT_VIA_DOCKER: "Image {{tag}} successfully built via Docker"
-IMAGE_BUILD_FAILED: "Image {{tag}} build failed"
-ALL_DOCKER_IMAGES_LIST: "All Docker images list:"
-TERMINATING_CHILD_PROCESS: "❗Received ⌃C, terminating child process..."
-CHILD_PROCESS_TERMINATED: "⛔ Child process terminated"
-CHILD_PROCESS_EXITED: "Child process exited with code:"
+  LABEL: 🧩 Build Stable Diffusion WebUI Extended Image
+  HINT: Includes localization, image browser, ControlNet, etc.
+SCREEN_NOT_FOUND: screen not found, now installing...
+SCREEN_INSTALLED_SUCCESSFULLY: screen installed successfully.
+SCREEN_INSTALLATION_FAILED: Error installing screen, please install manually.
+ERROR: Error
+STD_ERR: Standard Error
+STD_OUT: Standard Output
+SERVICE_FILE_CREATED: Service file '{{filename}}' created in '{{directory}}' and copied to /etc/systemd/system.
+BUILDING_IMAGE_VIA_DOCKER: Building image {tag} via Docker
+IMAGE_SUCCESSFULLY_BUILT_VIA_DOCKER: Image {tag} built successfully via Docker.
+IMAGE_BUILD_FAILED: Failed to build image {tag}.
+ALL_DOCKER_IMAGES_LIST: 'All Docker images list:'
+TERMINATING_CHILD_PROCESS: ❗Received ⌃C, terminating child process...
+CHILD_PROCESS_TERMINATED: ⛔ Child process terminated.
+CHILD_PROCESS_EXITED: 'Child process exited with code:'
+STOP_RELOAD_START: Stopping, reloading, and starting service...
+CLOSED_WITH_CODE: Child process exited with code {{code}}
+ERROR_PRINT: 'Error: {{err}}'
