improve build sdwebui base method

--- a/docker/src/i18n/locales/en_US/common.yaml
+++ b/docker/src/i18n/locales/en_US/common.yaml
@@ -51,9 +51,9 @@ ERROR: Error
 STD_ERR: Standard Error
 STD_OUT: Standard Output
 SERVICE_FILE_CREATED: Service file '{{filename}}' created in '{{directory}}' and copied to /etc/systemd/system.
-BUILDING_IMAGE_VIA_DOCKER: Building image {tag} via Docker
-IMAGE_SUCCESSFULLY_BUILT_VIA_DOCKER: Image {tag} built successfully via Docker.
-IMAGE_BUILD_FAILED: Failed to build image {tag}.
+BUILDING_IMAGE_VIA_DOCKER: Building image {{tag}} via Docker
+IMAGE_SUCCESSFULLY_BUILT_VIA_DOCKER: Image {{tag}} built successfully via Docker.
+IMAGE_BUILD_FAILED: Failed to build image {{tag}}.
 ALL_DOCKER_IMAGES_LIST: 'All Docker images list:'
 TERMINATING_CHILD_PROCESS: ❗Received ⌃C, terminating child process...
 CHILD_PROCESS_TERMINATED: ⛔ Child process terminated.
