--- a/docker/src/i18n/locales/zh_CN/common.yaml
+++ b/docker/src/i18n/locales/zh_CN/common.yaml
@@ -51,9 +51,9 @@ ERROR: 错误
 STD_ERR: 标准错误
 STD_OUT: 标准输出
 SERVICE_FILE_CREATED: 服务文件 '{{filename}}' 已在 '{{directory}}' 目录创建并复制到 /etc/systemd/system。
-BUILDING_IMAGE_VIA_DOCKER: 通过 Docker 构建镜像 {tag}
-IMAGE_SUCCESSFULLY_BUILT_VIA_DOCKER: 镜像 {tag} 通过 Docker 构建成功
-IMAGE_BUILD_FAILED: 镜像 {tag} 构建失败
+BUILDING_IMAGE_VIA_DOCKER: 通过 Docker 构建镜像 {{tag}}
+IMAGE_SUCCESSFULLY_BUILT_VIA_DOCKER: 镜像 {{tag}} 通过 Docker 构建成功
+IMAGE_BUILD_FAILED: 镜像 {{tag}} 构建失败
 ALL_DOCKER_IMAGES_LIST: 所有 Docker 镜像列表：
 TERMINATING_CHILD_PROCESS: ❗收到 ⌃C，正在终止子进程...
 CHILD_PROCESS_TERMINATED: ⛔ 已终止子进程
