add serviceName containerName networkName

--- a/docker/src/i18n/locales/en_US/common.yaml
+++ b/docker/src/i18n/locales/en_US/common.yaml
@@ -26,7 +26,8 @@ PRODUCTION_CONTAINER:
   HINT: Deploy service for end users
 STOPPING_AND_REMOVING_DOCKER_CONTAINERS: Stopping and removing old Docker containers...
 DOCKER_CONTAINERS_STOPPED_AND_REMOVED: Old Docker containers stopped and removed.
-STARTING_NEW_TEST_CONTAINER: Starting new test container...
+STARTING_NEW_TEST_CONTAINER: Starting new 🧪 test container...
+STARTING_NEW_PROD_CONTAINER: Starting new 🏭 production container...
 AUTO_LAUNCHER_INSTALLED_SUCCESSFULLY: Auto-launch service installed successfully.
 ERROR_INSTALLING_AUTO_LAUNCHER: Error installing auto-launch service.
 NVITOP_ALREADY_INSTALLED: Nvitop is already installed.
