--- a/docker/src/i18n/locales/zh_CN/common.yaml
+++ b/docker/src/i18n/locales/zh_CN/common.yaml
@@ -26,7 +26,8 @@ PRODUCTION_CONTAINER:
   HINT: 部署服务面向用户
 STOPPING_AND_REMOVING_DOCKER_CONTAINERS: 正在停止并删除旧的 Docker 容器...
 DOCKER_CONTAINERS_STOPPED_AND_REMOVED: 旧的 Docker 容器已停止并删除。
-STARTING_NEW_TEST_CONTAINER: 正在启动新的测试容器...
+STARTING_NEW_TEST_CONTAINER: 正在启动新的🧪测试容器...
+STARTING_NEW_PROD_CONTAINER: 正在启动新的🏭生产容器...
 AUTO_LAUNCHER_INSTALLED_SUCCESSFULLY: 自启服务安装成功。
 ERROR_INSTALLING_AUTO_LAUNCHER: 安装自启服务时出错
 NVITOP_ALREADY_INSTALLED: Nvitop已经安装。
