--- a/docker/src/i18n/locales/zh_CN/common.yaml
+++ b/docker/src/i18n/locales/zh_CN/common.yaml
@@ -77,5 +77,5 @@ RESTART: 重启
 DO_NOT_RESTART: 不重启
 GENERATING_TEST_COMPOSE_FILE: 生成测试容器的 docker-compose.yaml 文件
 GENERATING_PRODUCTION_COMPOSE_FILE: 生成生产容器的 docker-compose.yaml 文件
-ERROR_CHECKING_CONTAINER_STATUS: 检查 {{containerName}} 容器状态时出错：{{err}}
-ERROR_CONTAINER_NOT_RUNNING: 错误：容器 {{containerName}} 在5秒后仍未运行
+ERROR_CHECKING_CONTAINER_STATUS: 检查 {{repositoryName}} 容器状态时出错：{{err}}
+ERROR_CONTAINER_NOT_RUNNING: 错误：容器 {{repositoryName}} 在5秒后仍未运行
